<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Movies</string>
    <string name="second_fragment_label">Movie Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="network_error">Something went wrong! Try checking your internet connectivity</string>
    <string name="categories">Categories</string>
    <string name="synopsis">Synopsis</string>
    <string name="score">Score</string>
    <string name="reviews">Reviews</string>
    <string name="popularity">Popularity</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
</resources>